--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^13.0.4
   firebase_messaging: ^16.0.4
   cloud_functions: ^6.0.4
+  firebase_remote_config: ^6.1.0
   google_sign_in: ^6.2.0
   
   # Camera and Image
