--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,31 @@ my-release-key.jks
 *.log
 flutter_*.log
 flutter_*.png
+
+# Setup and documentation files (keep only in local development)
+ADMOB_*.md
+ANDROID_RUN_SETUP.md
+API_KEYS_*.md
+BACKEND_NOTIFICATION_GUIDE.md
+CLOUD_FUNCTIONS_SETUP.md
+CLUBS_LIST_SHEET_IMPLEMENTATION.md
+CLUB_FEATURES_IMPLEMENTATION.md
+COMPLETE_NOTIFICATIONS_GUIDE.md
+COMPLETE_NOTIFICATION_EVENTS.md
+EXPIRED_POSTS_CLEANUP.md
+FIRESTORE_RULES_UPDATES.md
+FIRESTORE_SCHEMA.md
+IMAGE_OPTIMIZATION_GUIDE.md
+IOS_*.md
+LOCATION_INPUT_UPDATE.md
+MAPS_*.md
+MAP_CONTROLS_FIX.md
+NOTIFICATION_*.md
+PLATFORM_SPECIFIC_MAPS_IMPLEMENTATION.md
+PROJECT_HEALTH_CHECK.md
+QUICK_*.md
+
+# Misc files
+errors\ on\ ios\ with\ maps
+*.iml
+sports_chat_app.iml
